# resource-pool

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_example.sh  check_lib.sh  install.sh  resource-pool-config.cmake  resource_pool.cpp  resource_pool.hpp
example/: main.cpp
example/pq/: CMakeLists.txt  main.cpp
resource-pool/: _CONTROL  portfile.cmake  vcpkg.json
